--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <script> let exports = {}; </script>
     <script src="./index.js" type="module"></script>
 </body>
 </html>
